backend_DEPRECATED/error_final.txt
[dotenv@17.2.3] injecting env (42) from .env -- tip: ­ƒöÉ encrypt with Dotenvx: https://dotenvx.com
Firebase Admin inicializado com sucesso.
[dotenv@17.2.3] injecting env (0) from .env -- tip: ­ƒöÉ prevent building .env in docker: https://dotenvx.com/prebuild
[dotenv@17.2.3] injecting env (0) from .env -- tip: ­ƒùé´©Å backup and recover secrets: https://dotenvx.com/ops
[dotenv@17.2.3] injecting env (0) from .env -- tip: ­ƒöÉ prevent committing .env to code: https://dotenvx.com/precommit
[dotenv@17.2.3] injecting env (0) from .env -- tip: ­ƒøá´©Å  run anywhere with `dotenvx run -- yourcommand`
C:\Users\thela\.gemini\antigravity\scratch\projeto_figma_app\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: Ô¿» Unable to compile TypeScript:
src/routes/providerSetup.ts(163,16): error TS2322: Type 'bigint' is not assignable to type 'number'.
src/routes/providerSetup.ts(170,9): error TS2353: Object literal may only specify known properties, and 'updated_at' does not exist in type '(Without<provider_custom_servicesUpdateInput, provider_custom_servicesUncheckedUpdateInput> & provider_custom_servicesUncheckedUpdateInput) | (Without<...> & provider_custom_servicesUpdateInput)'.
src/routes/providerSetup.ts(186,16): error TS2322: Type 'bigint' is not assignable to type 'number'.
src/routes/providerSetup.ts(187,30): error TS2353: Object literal may only specify known properties, and 'updated_at' does not exist in type '(Without<provider_custom_servicesUpdateInput, provider_custom_servicesUncheckedUpdateInput> & provider_custom_servicesUncheckedUpdateInput) | (Without<...> & provider_custom_servicesUpdateInput)'.

    at createTSError (C:\Users\thela\.gemini\antigravity\scratch\projeto_figma_app\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\thela\.gemini\antigravity\scratch\projeto_figma_app\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\thela\.gemini\antigravity\scratch\projeto_figma_app\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\thela\.gemini\antigravity\scratch\projeto_figma_app\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\thela\.gemini\antigravity\scratch\projeto_figma_app\backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\thela\.gemini\antigravity\scratch\projeto_figma_app\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2322, 2353, 2322, 2353 ]
}
